--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 4000
-MONGODB_URI = "mongodb://127.0.0.1:27017/zomatoapi"
+MONGODB_URI = "mongodb://dcode:dcode@ac-ih1pn28-shard-00-00.3q6zl8s.mongodb.net:27017,ac-ih1pn28-shard-00-01.3q6zl8s.mongodb.net:27017,ac-ih1pn28-shard-00-02.3q6zl8s.mongodb.net:27017/zomato-api?ssl=true&replicaSet=atlas-hedvnk-shard-0&authSource=admin&retryWrites=true&w=majority"
 KEY_ID =rzp_test_Wni9cy81wt5dpi
 KEY_SECRET = 325UyJ3IZnTPrzdNnqVAzdjH
